# LeXML

./: .gitignore  Cargo.toml  README.md
docs/: README.md  arquitetura.md  build-e-empacotamento.md  formato-xml.md  uso.md
packaging/: br.dev.schuh.lexml.desktop  build-appimage.sh  com.empresa.lexml.desktop
src/: app.rs  config.rs  dialog.rs  document.rs  i18n.rs  main.rs  row_object.rs  textdoc.rs  xmldoc.rs
